remove linenos css, restore border, fix overflow-x

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -129,22 +129,11 @@ pre,
 code {
     font-family: monospace;
     font-size: 15px;
-    /* border: 1px solid $grey-color-light; */
+    border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #111111;
     color: #eeeeee;
 }
-
-.linenodiv pre, .linenodiv code {
-  font-family: monospace;
-  font-size: 15px;
-  background-color: #222222;
-  color: #898989;
-}
-.linenos {
-  vertical-align: baseline;
-}
-
 
 code {
     padding: 1px 5px;
@@ -152,7 +141,7 @@ code {
 
 pre {
     padding: 8px 12px;
-    /* overflow-x: scroll; */
+    overflow-x: auto;
 
     > code {
         border: 0;
